fixed z-index issues

--- a/src/client/styles/sections/_cta-bottom.sass
+++ b/src/client/styles/sections/_cta-bottom.sass
@@ -48,7 +48,7 @@
     position: absolute
     top: 55px
     left: calc(50% - 90px)
-    z-index: 1024
+    z-index: 2
     display: none
     min-width: 180px
     @include breakpoint($bp-md)
