--- a/src/client/styles/sections/_header.sass
+++ b/src/client/styles/sections/_header.sass
@@ -2,7 +2,7 @@
   position: fixed
   top: 0
   left: 0
-  z-index: 10500
+  z-index: 3
   @include full
   min-height: 60px
   background: $bg-white
