--- a/src/client/styles/sections/_testimonials.sass
+++ b/src/client/styles/sections/_testimonials.sass
@@ -45,7 +45,7 @@
     position: absolute
     top: calc(50% - 25px)
     cursor: pointer
-    z-index: 999
+    z-index: 1
     +font-size(20)
     span.fa
       display: block
