--- a/src/client/styles/settings/_common.sass
+++ b/src/client/styles/settings/_common.sass
@@ -130,7 +130,7 @@ div[class^='section--']
   position: fixed
   bottom: 10px
   right: 10px
-  z-index: 10500
+  z-index: 5
   opacity: 0.5
   @include breakpoint($bp-max)
     opacity: 1
@@ -154,7 +154,7 @@ div[class^='section--']
   left: 0
   right: 0
   margin: 0 auto
-  z-index: 2000
+  z-index: 4
   display: none
   .panel-close
     position: absolute
